# MediScribe

./: .gitignore  ADK_INTEGRATION_GUIDE.md  ADK_SETUP_COMPLETE.md  ALL_FIXED_RESTART.md  ARCHITECTURE.md  BUG_FIX_SUMMARY.md  CHATGPT_MCP_WORKFLOW.md  CHOOSE_YOUR_SETUP.md  CLAUDE_SETUP.md  CORRECTED_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  DOWNLOAD_MODEL_GUIDE.md  ENCODING_FIXED.md  FILES_CREATED.md  FINAL_FIX.md  FINAL_SETUP.md  FINAL_SUMMARY.md  FIX_CLAUDE_CONNECTION.bat  FRESH_START.md  INDEX.md  INSTALL_FOR_CLAUDE.bat  INTEGRATION_SUMMARY.md  LICENSE  MCP_COMPLIANCE.md  MCP_QUICK_REFERENCE.md  MCP_SETUP.md  MCP_SETUP_GUIDE.md  MCP_USAGE_EXAMPLES.md  MULTILINGUAL_GUIDE.md  MULTILINGUAL_QUICK_START.md  MULTILINGUAL_SUMMARY.md  NETWORK_ISSUES_SOLUTION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_ADK.md  QUICK_START_SUMMARY.md  README.md  README_ADK_SETUP.md  README_CHATGPT_INTEGRATION.md  (+79 more)
.kiro/settings/: mcp.json
Vibe_Transcripts/: README.txt  README_mediscribe.json  patient_sarah.txt  shona_words.txt  shona_words_mediscribe.json  test_fixed.txt  test_fixed_mediscribe.json  test_patient.txt
agents/mediscribe/: __init__.py  agent.py
